--- a/website/package.json
+++ b/website/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.11",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/tailwind": "^5.1.1",
+    "@fontsource-variable/montserrat": "^5.1.0",
+    "@fontsource/black-ops-one": "^5.1.0",
+    "astro": "^4.15.11",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
 }
