--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,8 @@
     "@fontsource-variable/montserrat": "^5.1.0",
     "@fontsource/black-ops-one": "^5.1.0",
     "astro": "^4.15.11",
+    "counterapi": "^1.88.0",
+    "countup.js": "^2.8.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
