--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "^7.8.1",
     "@fontsource-variable/montserrat": "^5.1.0",
     "@fontsource/black-ops-one": "^5.1.0",
     "astro": "^4.15.11",
