--- a/website/package.json
+++ b/website/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
     "@astrojs/vercel": "^7.8.1",
     "@fontsource-variable/montserrat": "^5.1.0",
     "@fontsource/black-ops-one": "^5.1.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "astro": "^4.15.11",
     "counterapi": "^1.88.0",
     "countup.js": "^2.8.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   },
