--- a/website/package.json
+++ b/website/package.json
@@ -21,6 +21,7 @@
     "astro": "^4.15.11",
     "counterapi": "^1.88.0",
     "countup.js": "^2.8.0",
+    "photoswipe": "^5.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.13",
